--- a/Tex/Variablen.tex
+++ b/Tex/Variablen.tex
@@ -1,56 +1,58 @@
 \chapter{Variablen und Datentypen}
 Computerprogramme weisen im Wesentlichen drei relativ unabhängige Komponenten auf: Eingabe, Verarbeitung und Ausgabe. Bis jetzt haben wir uns nur mit der Ausgabe beschäftigt.
 Die einfachste Form der Eingabe kennen wir auch schon: Wir setzen Werte im Quelltext. Ein Beispiel dafür ist unser „Hello World“-Proramm, indem wir festlegen das genau „Hello World“ und nicht „foobar“ ausgeben werden soll.
-Um komplexere Eingaben, Verarbeitung und die Ausgabe dieser veränderlichen Daten zu ermöglichen brauchen wir eine Möglichkeit Daten abzuspeichern und zu bearbeiten, die vor dem Programmaufruf noch nicht bekannt sind.
-Genau dies erlaubt das Konzept der Variablen. Eine Variable ist ein Platzhalter für einen dieser unbekannten Werte. \\
 
+Um komplexere Eingaben, Verarbeitung und die Ausgabe dieser veränderlichen Daten zu ermöglichen brauchen wir eine Möglichkeit Daten abzuspeichern und zu bearbeiten, die vor dem Programmaufruf noch nicht bekannt sind.
+Genau dies erlaubt das Konzept der Variablen. Eine Variable ist ein Platzhalter für einen dieser unbekannten Werte. \\ \\
 Ersetzen wir im „Hello World“-Programm die Zeile
 \begin{lstlisting}
 System.out.println("Hello World");
 \end{lstlisting}
 durch die folgenden drei Zeilen:
 \begin{lstlisting}
-String text; // legt eine Variable mit der Bezeichnung text an.
-text = "Hello World"; // weist der Variable text den Wert "Hello World" zu.
-System.out.println(text); // gibt den Wert der Variablen text aus.
+String text;
+text = "Hello World";
+System.out.println(text);
 \end{lstlisting}
 
 Das neue Programm tut dasselbe wie das ursprüngliche „Hello World“-Proramm, ist allerdings besser als das alte, denn die Ausgabe ist jetzt von der Eingabe (im Quelltext) getrennt.
 
 \section {Befehle}
 Wie wir sehen ist das „Hello World“-Programm länger geworden. Um Variablen zu manipulieren braucht man nämlich Befehle. Diese Befehle kann man daran erkennen, dass sie mit einem Semikolon enden. Abgearbeitet werden sie in der Reihenfolge in der man sie liest. Im Quelltext oben stehen drei Befehlsaufrufe:
+
 Die Deklaration einer Variablen, eine Wertzuweisung und ein Funktionsaufruf. Das sind drei der wichtigsten Befehlsarten.
 
 \subsection {Deklaration und Definition}
 Um mit Variablen arbeiten zu können braucht man zwei Schritte: Deklaration und Definition.
 
-„Sei p eine Primzahl” entspricht in etwa dem, was man dem Compiler bei der Deklaration einer Variable sagt. Um Werte digital abspeichern zu können muss man Wissen, um was für Daten es sich Handelt. Eine Zahl muss anders abgespeichtert werden, als zum Beispiel eine Zeichenkette wie „Hello World“.
+„Sei p eine Primzahl” entspricht in etwa dem, was man dem Compiler bei der Deklaration einer Variable sagt. Um Werte digital abspeichern zu können muss man Wissen, um was für Daten es sich handelt. Eine Zahl muss anders abgespeichtert werden, als zum Beispiel eine Zeichenkette wie „Hello World“.
+
 Glücklicherweise müssen wir als Programmierer uns keine Gedanken mehr darum machen, wie die Daten intern repräsentiert werden.
-Um auszudrücken um was für Daten es sich handelt gibt es sogenannte Datentypen. Eine kleine Auswahl der verfügbaren Typen findest du in der Tabelle.
+Um auszudrücken um was für Daten es sich handelt gibt es sogenannte Datentypen. Eine kleine Auswahl der verfügbaren Typen findest du in der Tabelle \ref{Datentypen}. \\
 
 \begin{table}
 \centering
 \begin{tabular}{l|l|l}
 Java-Code & Beispiel & Bedeutung \\ \hline
-int & 42 & Ganzzahlen \\
-double & 3.1415 & Fließkommazahlen \\
-char & q & Buchstaben \\
-boolean & false & Wahrheitswerte \\
-String & \lstinline$"Foobar"$ & Zeichenketten \\
+\lstinline$int$ & \lstinline$42$ & Ganzzahlen \\
+\lstinline$double$ & \lstinline$3.1415$ & Fließkommazahlen \\
+\lstinline$char$ & \lstinline$'q'$ & Buchstaben \\
+\lstinline$boolean$ & \lstinline$false$ & Wahrheitswerte \\
+\lstinline$String$ & \lstinline$"Foobar"$ & Zeichenketten \\
 
 \end{tabular}
-\label{Datentypen}
 \caption{Datentypen in Java}
+\label{Datentypen}
 \end{table}
 
-Der Befehl für die Definition einer Variablen sieht so aus: 
+Der Befehl für die Deklaration einer Variablen sieht so aus: 
 \begin{lstlisting}
 Typname variablenname;
 \end{lstlisting}
 Beachtet, das Variablennamen üblicherweise kleingeschrieben werden.
 
 Jetzt kennt der Compiler den Typ der Variablen. 
-Damit man auch etwas mit Variablen anfangen kann braucht die Variable noch einen Wert – die Wertzuweisung heißt Definition der Variablen.
+Damit man auch etwas mit Variablen anfangen kann braucht die Variable noch einen Wert – die Wertzuweisung heißt Definition der Variablen. \\
 Eine Zuweisung sieht so aus: 
 \begin{lstlisting}
 variablenname = Wert;
@@ -81,7 +83,9 @@ Für andere Typänderungen gibt es Funktionen.
 \subsection{Funktionsaufrufe}
 Funktionen sind vorgefertigte Unterprogramme, die einen bestimmten Zweck erfüllen. Eine Funktion kennt ihr schon: \lstinline$System.out.println()$.
 Diese Funktion tut etwas, und gibt dann die Kontrolle wieder an den nächsten Befehl ab. Es gibt aber auch Funktionen, die einen Wert berechnen.
+
 Diesen Wert nennt man Rückgabewert. Die Funktion \lstinline$Math.random()$ hat als Rückgabewert einen zufälligen Wert.
+
 Wie packt man nun Funktionen in einen Befehl? Interessiert uns der Rückgabewert der Funktion, so benutzen wir die Funktion in einer Zuweisung: 
 \begin{lstlisting}
 zufallszahl = Math.random();
@@ -91,17 +95,22 @@ Interessiert uns der Rückgabewert nicht, so lassen wir die linke Seite der Zuwe
 Math.random();
 \end{lstlisting}
 Viele Funktionen, beispielsweise \lstinline$System.out.println()$, sind in der Lage Daten weiterzuverarbeiten. Dafür muss der Funktion allerdings mitgeteilt werden, welche Daten gemeint sind.
+
 Um diese Daten an die Funktion zu übergeben gibt es die Klammern nach dem Funktionsnamen. Dort kann man die entsprechenden Werte eintragen.
+
 Sollen der Funktion mehrere Werte übergeben werden, so müssen diese durch Kommata getrennt werden – die Reihenfolge der Parameter entscheidet dabei darüber, welcher Wert wofür benutzt wird.
 \begin{lstlisting}
 funktion(parameter1, parameter2 /* . . . */);
 \end{lstlisting}
 
 \section {Einlesen von Werten}
-Um Werte einzulesen braucht man eine Variable vom Typ \lstinline$Scanner$. Mit dem Scanner kann man nicht nur von der Standarteingabe, sondern auch aus Dateien, Netzwerkverbindungen und anderen Quellen Daten einlesen. 
+Um Werte einzulesen braucht man eine Variable vom Typ \lstinline$Scanner$. 
+
+Mit dem Scanner kann man nicht nur von der Standarteingabe, sondern auch aus Dateien, Netzwerkverbindungen und anderen Quellen Daten einlesen. 
 Deswegen muss man Angeben, dass der Scanner die Daten aus \lstinline$System.in$ beziehen soll.
+
 Danach kann man mit \lstinline$scannervariable.next()$ die nächste Eingabe abholen.
-Außerdem muss man um den Scanner benutzen zu können mit \lstinline$import java.util.Scanner;$ ein weiteres Paket einbinden in dem der Scanner enthalten ist.
+Außerdem muss man um den Scanner benutzen zu können mit \lstinline$import java.util.Scanner;$ ein weiteres Paket einbinden in dem der Scanner enthalten ist. \\
 Im Quelltext sieht das so aus:
 \begin{lstlisting}
 import java.io.*; // Pakete fuer ein und Ausgaben
@@ -119,10 +128,10 @@ public class Hello {
 Damit ist unser „Hello World“-Programm, schon richtig gut, denn es kann nun auf Nutzereingaben reagieren.
 
 \section {Aufgaben}
-\begin{itemize}
+\begin{enumerate}
 \item Füge eine neue Textausgabe ein, die den Nutzer auffordert seinen Namen einzugeben, sonst weiß er nicht, dass er etwas eingeben soll.
 \item Schreibe ein Java Programm, dass den Ape-Faktor einer Person ausgibt, nachdem man Größe und Armspanne eingegeben hat. (Der Ape-Faktor ist die Differenz zwischen Größe und Armspanne einer Person)
 \item Schreibe ein Programm, dass den ASCII-Code eines eingegeben Buchstaben ausgibt.
-\end{itemize}
+\end{enumerate}
 
 Zusatz: Schreibe ein Programm, dass einen Buchstaben mit der Caesar-Verschlüsselung (mit Variabler Verschiebeweite) verschlüsseln kann.
