--- a/Tex/Unix.tex
+++ b/Tex/Unix.tex
@@ -30,6 +30,7 @@ Verzeichnis & Bedeutung \\ \hline
 \lstinline$/usr$ & „unix system resources“ Dateien die für alle Nutzer relevant sind \\
 \lstinline$/var$ & Variabler Inhalt, in \lstinline$/var/log$ verstecken sich diverse Log-Files
 \end{tabular}
+\caption{Slash und seine Kinder}
 \label{UNIX-Verzeichnisse}
 \end{table}
 
