listings wo listings sein sollten

--- a/Tex/HelloWorld.tex
+++ b/Tex/HelloWorld.tex
@@ -43,18 +43,18 @@ Mehrzeilige Kommentare beginnen mit \lstinline$/*$ und enden mit \lstinline$*/$.
 
 
 \subsection{Das Programm ausführen}
-Um das Programm auszuführen, musst du zuerst den Quelltext des Programms in Bytecode umwandeln lassen und dann die Java-Virtual-Maschine aufrufen, die den Bytecode aufsführt. 
+Um das Programm auszuführen, musst du zuerst den Quelltext des Programms in Bytecode umwandeln lassen und dann die Java-Virtual-Maschine (JVM) aufrufen, die den Bytecode aufsführt. 
 Für das Übersetzen des Quelltextes in Bytecode ist der Java-Compiler zuständig
-Unter UNIX ruft man den Java-Compiler aus dem Terminal mit „javac Hello.java“ auf. Der Compiler hat nun, sofern das Programm keine Fehler enthält eine Datei mit dem Namen „Hello.class“ erzeugt (oder eine ältere Version überschrieben) – diese Datei enthält den Bytecode.
-Die JVM kannst du mit dem Befehl „java“ aufrufen. „java Hello“ führt den Bytecode in Hello.class aus.
+Unter UNIX ruft man den Java-Compiler aus dem Terminal mit \lstinline$javac Hello.java$ auf. Der Compiler hat nun, sofern das Programm keine Fehler enthält eine Datei mit dem Namen „Hello.class“ erzeugt (oder eine ältere Version überschrieben) – diese Datei enthält den Bytecode.
+Die JVM kannst du mit dem Befehl \lstinline$java$ aufrufen. \lstinline$java Hello$ führt den Bytecode in Hello.class aus.
 
 \section {Aufgaben}
 \begin{enumerate}
-\item Sieh dir den Quelltext in Hello.java an
-\item Kompiliere das Programm und führe es aus
-\item Ändere den ausgegebenen Text
-\item Ändere den Namen des Programms
-\item Führe das geänderte Progamm aus
+\item Sieh dir den Quelltext in Hello.java an.
+\item Kompiliere das Programm und führe es aus.
+\item Ändere den ausgegebenen Text.
+\item Ändere den Namen des Programms.
+\item Führe das geänderte Progamm aus.
 \end{enumerate}
 
 Normalerweise bearbeitet man Quelltext nicht in einem einfachen Texteditor sondern einer weit praktischeren Entwicklungsumgebung.
