--- a/Tex/Funktionen.tex
+++ b/Tex/Funktionen.tex
@@ -165,7 +165,7 @@ In der Funktion \textit{factorial} findet ihr beide Elemente, die jede Rekursion
 \section{Aufgaben}
 
 \begin{enumerate}
-	\item Du kennst sicherlich den Bereich in diversen Supermärkten in denen die Einkaufswägen stehen. Mit dem Programm ShoppingCart.java wollen wir diesen Bereich jetzt nachbauen.
+	\item Du kennst sicherlich den Bereich in diversen Supermärkten in denen die Einkaufswagen stehen. Mit dem Programm ShoppingCart.java wollen wir diesen Bereich jetzt nachbauen.
 	\begin{itemize}
 		\item Mach aus der Ausgabe eine Funktion mit einem aussagekräftigen Namen.
 		\item Schreibe eine Funktion, die einen Einkaufswagen aus einer zufällig gewählten Reihe wegnimmt.
