noch mehr aufgaben \o/

--- a/Tex/IdeeZuProgramm.tex
+++ b/Tex/IdeeZuProgramm.tex
@@ -46,4 +46,5 @@ Dort versteht man, ohne Ahnung von einer konkreten Programmiersprache zu haben, 
 \begin{itemize}
 	\item Finde heraus welches Problem der gegebene Pseudocode löst.
 	\item Schreibe einen Pseudocode, welcher die Weckzeit deines Weckers bestimmt.
+	\item Schreibe ein Programm im Pseudocode, lass dir von jemand anderem aus deinem Kurs erklären, was der Code tut.
 \end{itemize}
